--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -1,9 +1,10 @@
 .mtBtn {
-    padding: 10px 25px;
+    padding: 5px 15px;
     color: teal;
     font-size: 14px;
     background: aliceblue;
     border: 1px solid teal;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
 }
