--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -7,4 +7,7 @@
     cursor: pointer;
     border-radius: 5px;
     margin-bottom: 15px;
+    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
+    
+
 }
