--- a/src/components/UI/input/MyInput.module.css
+++ b/src/components/UI/input/MyInput.module.css
@@ -1,7 +1,9 @@
 .myInput {
     width: 100%;
-    padding: 5px 15px;
+    padding: 7px 15px;
     margin: 5px 0;
     border: 1px solid teal;
     border-radius: 5px;
+    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
+
 }
