--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,3 +30,22 @@
 .post button {
     margin-top: 10px;
 }
+
+.post-enter {
+    transform: translateX(-350px);
+}
+
+.post-enter-active {
+    transform: translateX(0px);
+    transition: all 250ms ease-in;
+}
+
+.post-exit {
+    opacity: 1;
+}
+
+.post-exit-active {
+    transform: translateX(-750px);
+    opacity: 0.2;
+    transition: all 250ms ease-in;
+}
